Adjust padding and margin in grid div

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         <!-- This is the end of the bg-img div -->
       </div>
       <div
-        class="grid grid-cols-3 gap-[20px] justify-between py-[20px] md:pl-[200px] px-[10px] bg-[#F7D2AD] text-[14px] md:text-[18px] rounded-b-[30px]"
+        class="grid grid-cols-3 gap-[20px] justify-between py-[20px] pl-[30px] md:ml-[200px] px-[10px] bg-[#F7D2AD] text-[14px] md:text-[18px] rounded-b-[30px]"
       >
         <p id="selectiontxt" class="hover:text-[#e6bb94]">
           <a href="#CoffeeSelection"> Coffee Selection</a>
